--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,16 @@ defusedxml==0.5.0
 Django==2.1.3
 django-allauth==0.38.0
 django-localflavor==2.1
+httplib2==0.12.0
 idna==2.7
+oauth2==1.9.0.post1
 oauthlib==2.1.0
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.20.1
 requests-oauthlib==1.0.0
 six==1.11.0
+ticketpy==1.1.2
 urllib3==1.24.1
+yelp==1.0.2
+yelpapi==2.3.0
