--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+asn1crypto==0.24.0
 certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.5
 defusedxml==0.5.0
 Django==2.1.3
 django-allauth==0.38.0
@@ -8,11 +11,16 @@ httplib2==0.12.0
 idna==2.7
 oauth2==1.9.0.post1
 oauthlib==2.1.0
+pycparser==2.19
+PyJWT==1.7.1
+pyOpenSSL==17.3.0
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.20.1
 requests-oauthlib==1.0.0
 six==1.11.0
+social-auth-app-django==3.1.0
+social-auth-core==3.0.0
 ticketpy==1.1.2
 urllib3==1.24.1
 yelp==1.0.2
