--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,11 @@ httplib2==0.12.0
 idna==2.7
 oauth2==1.9.0.post1
 oauthlib==2.1.0
+Pillow==5.4.1
 pycparser==2.19
 PyJWT==1.7.1
 pyOpenSSL==17.3.0
+python-resize-image==1.1.18
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.20.1
