--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ cryptography==2.5
 defusedxml==0.5.0
 Django==2.1.3
 django-allauth==0.38.0
+django-extensions==2.1.6
 django-localflavor==2.1
 httplib2==0.12.0
 idna==2.7
+image==1.5.27
 oauth2==1.9.0.post1
 oauthlib==2.1.0
 Pillow==5.4.1
